changed append to text block in CheckInformationServiceImpl